--- a/style.css
+++ b/style.css
@@ -17,9 +17,10 @@ body {
 
 /* Logo */
 .logo {
-  max-width: 100%;
+  max-width: 220px;
   height: auto;
-  margin-bottom: 1.5rem;
+  margin: 1rem auto 1.5rem;
+  display: block;
 }
 
 /* Section Titles */
